@@ -32,6 +32,7 @@ Each of these values can be found in any section. The service being run will try
   * decode_utf_8: [True,False], When you retrieve docs from the server, you can have GoogleCL try to remove the UTF-8 byte-order marker (BOM) from the document. Most users will not need to worry about this and want to leave this as undefined or false, but it's handy if you have an application sensitive to the BOM such as `less` or `tex`.
   * editor: [<editor>], The editor to use by default if the document type is not defined by an xxx_editor option. If this is not defined, will use the EDITOR environment variable instead.
   * format: [<extension>], The extension to use by default if the document type is not defined by an xxx_format option.
+  * impatient_editors: [<editor1>,<editor2>...], Comma separated list of editors that will not wait for you to finish editing before exiting / returning from the command line. For example, setting this equal to "openoffice.org" (without the quotes) will stop GoogleCL from uploading any changes to Docs until you give it the OK.
 
 1.4 General
   * auth_browser: [<browser>], Browser to launch when authenticating the OAuth request token. You should only need to authenticate to each service once.
