@@ -5,6 +5,7 @@ version x.x.x
  * Allow specification of date for added calendar events.
  * Added --access option for Picasa, Blogger, and YouTube creation tasks.
  * Improved and expanded list fields for youtube, picasa, and blogger.
+ * impatient_editors config file option can stop programs like openoffice.org from exiting immediately during docs edit command.
 
  Bugfixes
  * --editor option for Docs can take flags and options.
